# app/Http/Controllers/StatisticsController.php
@@ -4,7 +4,6 @@ namespace App\Http\Controllers;
 
 use App\Http\Requests\StoreStatisticsRequest;
 use App\Service\TrackService;
-use Illuminate\Http\Request;
 use Illuminate\Http\Response;
 
 class StatisticsController extends BaseController
@@ -18,13 +17,16 @@ class StatisticsController extends BaseController
 
     /**
      * @OA\Post(
-     *      path="/statistics",
+     *      path="api/statistics",
      *      operationId="store",
      *      tags={"Statistics"},
      *     @OA\RequestBody(
-     *         description="Pet object that needs to be added to the store",
      *         required=true,
-     *         @OA\JsonContent(ref="#/components/schemas/StoreStatisticsRequest"),
+     *         @OA\JsonContent(
+     *             @OA\Property(property="link", type="string", example="google.com"),
+     *             @OA\Property(property="link_type", type="string", example="homepage"),
+     *             @OA\Property(property="customer_uuid", type="string", format="uuid", example="09bfb8dc-fdc9-3bc0-a417-2eaf1f293c13"),
+     *         )
      *     ),
      *      @OA\Response(
      *          response=201,
@@ -35,12 +37,14 @@ class StatisticsController extends BaseController
      *          description="Bad Request"
      *      )
      * )
+     * @param StoreStatisticsRequest $request
+     * @return Response
      */
     public function store(StoreStatisticsRequest $request): Response
     {
         if ($request->validated()) {
             $this->trackService->track($request);
-            return response()->setStatusCode(Response::HTTP_CREATED);
+            return response(null, Response::HTTP_CREATED);
         }
     }
 }
