# app/Http/Requests/StoreStatisticsRequest.php
@@ -4,16 +4,6 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-/**
- *
- * @OA\Schema(
- * required={"link","link_type", "customer_uuid"},
- * @OA\Xml(name="StoreStatisticsRequest"),
- * @OA\Property(property="link", type="integer", readOnly="true", example="1"),
- * @OA\Property(property="link_type", type="string", readOnly="true", description="User role"),
- * @OA\Property(property="customer_uuid", type="string", readOnly="true", format="email", description="User unique email address", example="user@gmail.com"),
- * )
- */
 class StoreStatisticsRequest extends FormRequest
 {
     /**
@@ -23,7 +13,7 @@ class StoreStatisticsRequest extends FormRequest
      */
     public function authorize()
     {
-        return false;
+        return true;
     }
 
     /**
@@ -38,5 +28,20 @@ class StoreStatisticsRequest extends FormRequest
             'link_type' => 'required',
             'customer_uuid' => 'required'
         ];
+    }
+
+    public function getLink(): string
+    {
+        return $this->request->get('link');
+    }
+
+    public function getLinkType(): string
+    {
+        return $this->request->get('link_type');
+    }
+
+    public function getCustomerUuid(): string
+    {
+        return $this->request->get('customer_uuid');
     }
 }
